--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -64,7 +64,7 @@ div#content {
     flex-direction: column;
     position: relative;
     flex: 1;
-    max-width: 800px;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
